--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = ""
 authors = ["YangLorenzo <yangrongwei2002@gmail.com>"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+animelist = "animelist.main:app"
+
 [tool.poetry.dependencies]
 python = "^3.11"
-typer = {extras = ["all"], version = "^0.7.0"}
+typer = { extras = ["all"], version = "^0.7.0" }
 
 
 [build-system]
